비디오 수정
autoplay muted loop playsinline

--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                   <div class="swiper-slide">
                     <div class="main_img main_video">
                         <div class="video_cover"></div>
-                        <video src="img/TT.webm" autoplay muted loop></video>
+                        <video src="img/TT.webm" autoplay muted loop playsinline></video>
                     </div>
                     
                     <div class="main_text main_video_text">
@@ -355,12 +355,12 @@
                     </a></div>
                 </div>
                 <div class="sec_2_video sec_c_video">
-                    <video src="./img/diamonds.webm" autoplay muted loop ></video>
+                    <video src="./img/diamonds.webm" autoplay muted loop playsinline ></video>
                 </div>
             </section>
             <section class="sec_3 sec_c">
                 <div class="sec_3_video sec_c_video">
-                    <video src="./img/eye.webm" autoplay muted loop></video>
+                    <video src="./img/eye.webm" autoplay muted loop playsinline></video>
                 </div>
 
                 <div class="sec_3_title sec_c_title">
@@ -502,7 +502,7 @@
             <ul class="sec_5_con_wrap">
                 <li class="sec_5_con_1 sec_5_con">
                     <div class="sec_5_video">
-                        <video src="img/sec_5-1.webm" autoplay muted loop></video>
+                        <video src="img/sec_5-1.webm" autoplay muted loop playsinline></video>
                     </div>
                     <h3>바다에서 영감을 받은 주얼리</h3>
                     <div class="sec_5_btn"><a href="#">
@@ -511,7 +511,7 @@
                 </li>
                 <li class="sec_5_con_2 sec_5_con">
                     <div class="sec_5_video">
-                        <video src="img/sec_5-2.webm" autoplay muted loop></video>
+                        <video src="img/sec_5-2.webm" autoplay muted loop playsinline></video>
                     </div>
                     <h3>워치 스타일 가이드</h3>
                     <div class="sec_5_btn"><a href="#">
@@ -520,7 +520,7 @@
                 </li>
                 <li class="sec_5_con_3 sec_5_con">
                     <div class="sec_5_video">
-                        <video src="img/sec_5-3.webm" autoplay muted loop></video>
+                        <video src="img/sec_5-3.webm" autoplay muted loop playsinline></video>
                     </div>
                     <h3>Disney 이상한 나라의 앨리스와 친구들</h3>
                     <div class="sec_5_btn"><a href="#">
